--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <h1>Henrique Queiroz Scoppetta Sampaio</h1>
     <p>Salvador, Bahia, Brasil</p>
     <p>📞 (71) 98797-9506 | 📧 henriquescoppettasampaio@gmail.com</p>
-    <a href="Curriculo.pdf" class="btn" download>📄 Baixar Currículo Completo</a>
+    <a href="Curriculo Docs Estilo.docx.pdf" class="btn" download>📄 Baixar Currículo Completo</a>
   </header>
 
   <main>
