--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
     <h1>Henrique Queiroz Scoppetta Sampaio</h1>
     <p>Salvador, Bahia, Brasil</p>
     <p>📞 (71) 98797-9506 | 📧 henriquescoppettasampaio@gmail.com</p>
-    <!-- Corrigido: espaços no nome do arquivo agora estão codificados (%20) -->
-    <a href="Curriculo%20Docs%20Estilo.docx.pdf" class="btn" download="Henrique_Scoppetta_Curriculo.pdf">📄 Baixar Currículo Completo</a>
+    <a href="curriculo.pdf" class="btn" download="Henrique_Scoppetta_Curriculo.pdf">📄 Baixar Currículo Completo</a>
   </header>
 
   <main>
