Update download filename for curriculum link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <h1>Henrique Queiroz Scoppetta Sampaio</h1>
     <p>Salvador, Bahia, Brasil</p>
     <p>📞 (71) 98797-9506 | 📧 henriquescoppettasampaio@gmail.com</p>
-    <a href="curriculo.pdf" class="btn" download="Henrique_Scoppetta_Curriculo.pdf">📄 Baixar Currículo Completo</a>
+    <a href="curriculo.pdf" class="btn" download="curriculo.pdf">📄 Baixar Currículo Completo</a>
   </header>
 
   <main>
